# grocery-price-scraper

./: .dockerignore  .gitignore  DAILY_AUTOMATION_GUIDE.md  DOCKER_GUIDE.md  FEATURES.md  FEATURES_REPORT.md  FINAL_TEST_RESULTS.md  FREE_SCRAPING_SOLUTION.md  GET_STARTED.txt  GIT_COMMITS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_GUIDE.md  INSTALL.md  INSTALL_SELENIUM.md  Makefile  OPTIMIZATION_SUMMARY.md  PROJECT_FEATURES_REPORT.md  PROJECT_STRUCTURE.md  PUBLIX_URL_RESEARCH.md  QUICKSTART.md  QUICK_START_DAILY.md  README.md  README_DEPLOYMENT.md  RUN_RESULTS.md  RUN_TEST_RESULTS.md  SCRAPING_STRATEGY_UPDATE.md  START_HERE.md  STRUCTURE_SUMMARY.md  TEST_RESULTS.md  TEST_RESULTS_FINAL.md  URL_UPDATE.md  USAGE.md  docker-start.sh  docker-stop.sh  fetch_all_stores.py  generate_weekly_dataset.py  pyproject.toml  requirements.txt  run_project.py  (+3 more)
docker/: Dockerfile  README.md  docker-compose.yml
screenshots/: README.md
scripts/: demo.py
src/publix_scraper/: __init__.py  cli.py  main.py  scheduler.py
src/publix_scraper/core/: __init__.py  config.py  models.py  scraper.py  store_locator.py
src/publix_scraper/handlers/: __init__.py  deduplication.py  incremental.py  storage.py  summary.py  validator.py
src/publix_scraper/integrations/: __init__.py  database.py  email.py  google_sheets.py  webhook.py
src/publix_scraper/utils/: __init__.py  exceptions.py  logging_config.py  retry.py  week_calculator.py
